@@ -1,9 +1,9 @@
-.rn '' }`
-''' $RCSfile$$Revision$$Date$
-'''
-''' $Log$
-'''
-.de Sh
+.\" Automatically generated by Pod::Man version 1.02
+.\" Wed Sep  4 14:07:36 2002
+.\"
+.\" Standard preamble:
+.\" ======================================================================
+.de Sh \" Subsection heading
 .br
 .if t .Sp
 .ne 5
@@ -11,150 +11,106 @@
 \fB\\$1\fR
 .PP
 ..
-.de Sp
+.de Sp \" Vertical space (when we can't use .PP)
 .if t .sp .5v
 .if n .sp
 ..
-.de Ip
+.de Ip \" List item
 .br
 .ie \\n(.$>=3 .ne \\$3
 .el .ne 3
 .IP "\\$1" \\$2
 ..
-.de Vb
+.de Vb \" Begin verbatim text
 .ft CW
 .nf
 .ne \\$1
 ..
-.de Ve
+.de Ve \" End verbatim text
 .ft R
 
 .fi
 ..
-'''
-'''
-'''     Set up \*(-- to give an unbreakable dash;
-'''     string Tr holds user defined translation string.
-'''     Bell System Logo is used as a dummy character.
-'''
+.\" Set up some character translations and predefined strings.  \*(-- will
+.\" give an unbreakable dash, \*(PI will give pi, \*(L" will give a left
+.\" double quote, and \*(R" will give a right double quote.  | will give a
+.\" real vertical bar.  \*(C+ will give a nicer C++.  Capital omega is used
+.\" to do unbreakable dashes and therefore won't be available.  \*(C` and
+.\" \*(C' expand to `' in nroff, nothing in troff, for use with C<>
 .tr \(*W-|\(bv\*(Tr
+.ds C+ C\v'-.1v'\h'-1p'\s-2+\h'-1p'+\s0\v'.1v'\h'-1p'
 .ie n \{\
-.ds -- \(*W-
-.ds PI pi
-.if (\n(.H=4u)&(1m=24u) .ds -- \(*W\h'-12u'\(*W\h'-12u'-\" diablo 10 pitch
-.if (\n(.H=4u)&(1m=20u) .ds -- \(*W\h'-12u'\(*W\h'-8u'-\" diablo 12 pitch
-.ds L" ""
-.ds R" ""
-'''   \*(M", \*(S", \*(N" and \*(T" are the equivalent of
-'''   \*(L" and \*(R", except that they are used on ".xx" lines,
-'''   such as .IP and .SH, which do another additional levels of
-'''   double-quote interpretation
-.ds M" """
-.ds S" """
-.ds N" """""
-.ds T" """""
-.ds L' '
-.ds R' '
-.ds M' '
-.ds S' '
-.ds N' '
-.ds T' '
+.    ds -- \(*W-
+.    ds PI pi
+.    if (\n(.H=4u)&(1m=24u) .ds -- \(*W\h'-12u'\(*W\h'-12u'-\" diablo 10 pitch
+.    if (\n(.H=4u)&(1m=20u) .ds -- \(*W\h'-12u'\(*W\h'-8u'-\"  diablo 12 pitch
+.    ds L" ""
+.    ds R" ""
+.    ds C` `
+.    ds C' '
 'br\}
 .el\{\
-.ds -- \(em\|
-.tr \*(Tr
-.ds L" ``
-.ds R" ''
-.ds M" ``
-.ds S" ''
-.ds N" ``
-.ds T" ''
-.ds L' `
-.ds R' '
-.ds M' `
-.ds S' '
-.ds N' `
-.ds T' '
-.ds PI \(*p
+.    ds -- \|\(em\|
+.    ds PI \(*p
+.    ds L" ``
+.    ds R" ''
 'br\}
-.\"	If the F register is turned on, we'll generate
-.\"	index entries out stderr for the following things:
-.\"		TH	Title 
-.\"		SH	Header
-.\"		Sh	Subsection 
-.\"		Ip	Item
-.\"		X<>	Xref  (embedded
-.\"	Of course, you have to process the output yourself
-.\"	in some meaninful fashion.
-.if \nF \{
-.de IX
-.tm Index:\\$1\t\\n%\t"\\$2"
-..
-.nr % 0
-.rr F
+.\"
+.\" If the F register is turned on, we'll generate index entries on stderr
+.\" for titles (.TH), headers (.SH), subsections (.Sh), items (.Ip), and
+.\" index entries marked with X<> in POD.  Of course, you'll have to process
+.\" the output yourself in some meaningful fashion.
+.if \nF \{\
+.    de IX
+.    tm Index:\\$1\t\\n%\t"\\$2"
+.    .
+.    nr % 0
+.    rr F
 .\}
-.TH parprouted 8 "parprouted" "July 2002" "Proxy ARP Bridging Daemon"
-.UC
-.if n .hy 0
+.\"
+.\" For nroff, turn off justification.  Always turn off hyphenation; it
+.\" makes way too many mistakes in technical documents.
+.hy 0
 .if n .na
-.ds C+ C\v'-.1v'\h'-1p'\s-2+\h'-1p'+\s0\v'.1v'\h'-1p'
-.de CQ          \" put $1 in typewriter font
-.ft CW
-'if n "\c
-'if t \\&\\$1\c
-'if n \\&\\$1\c
-'if n \&"
-\\&\\$2 \\$3 \\$4 \\$5 \\$6 \\$7
-'.ft R
-..
-.\" @(#)ms.acc 1.5 88/02/08 SMI; from UCB 4.2
-.	\" AM - accent mark definitions
+.\"
+.\" Accent mark definitions (@(#)ms.acc 1.5 88/02/08 SMI; from UCB 4.2).
+.\" Fear.  Run.  Save yourself.  No user-serviceable parts.
 .bd B 3
-.	\" fudge factors for nroff and troff
+.    \" fudge factors for nroff and troff
 .if n \{\
-.	ds #H 0
-.	ds #V .8m
-.	ds #F .3m
-.	ds #[ \f1
-.	ds #] \fP
+.    ds #H 0
+.    ds #V .8m
+.    ds #F .3m
+.    ds #[ \f1
+.    ds #] \fP
 .\}
 .if t \{\
-.	ds #H ((1u-(\\\\n(.fu%2u))*.13m)
-.	ds #V .6m
-.	ds #F 0
-.	ds #[ \&
-.	ds #] \&
+.    ds #H ((1u-(\\\\n(.fu%2u))*.13m)
+.    ds #V .6m
+.    ds #F 0
+.    ds #[ \&
+.    ds #] \&
 .\}
-.	\" simple accents for nroff and troff
+.    \" simple accents for nroff and troff
 .if n \{\
-.	ds ' \&
-.	ds ` \&
-.	ds ^ \&
-.	ds , \&
-.	ds ~ ~
-.	ds ? ?
-.	ds ! !
-.	ds /
-.	ds q
+.    ds ' \&
+.    ds ` \&
+.    ds ^ \&
+.    ds , \&
+.    ds ~ ~
+.    ds /
 .\}
 .if t \{\
-.	ds ' \\k:\h'-(\\n(.wu*8/10-\*(#H)'\'\h"|\\n:u"
-.	ds ` \\k:\h'-(\\n(.wu*8/10-\*(#H)'\`\h'|\\n:u'
-.	ds ^ \\k:\h'-(\\n(.wu*10/11-\*(#H)'^\h'|\\n:u'
-.	ds , \\k:\h'-(\\n(.wu*8/10)',\h'|\\n:u'
-.	ds ~ \\k:\h'-(\\n(.wu-\*(#H-.1m)'~\h'|\\n:u'
-.	ds ? \s-2c\h'-\w'c'u*7/10'\u\h'\*(#H'\zi\d\s+2\h'\w'c'u*8/10'
-.	ds ! \s-2\(or\s+2\h'-\w'\(or'u'\v'-.8m'.\v'.8m'
-.	ds / \\k:\h'-(\\n(.wu*8/10-\*(#H)'\z\(sl\h'|\\n:u'
-.	ds q o\h'-\w'o'u*8/10'\s-4\v'.4m'\z\(*i\v'-.4m'\s+4\h'\w'o'u*8/10'
+.    ds ' \\k:\h'-(\\n(.wu*8/10-\*(#H)'\'\h"|\\n:u"
+.    ds ` \\k:\h'-(\\n(.wu*8/10-\*(#H)'\`\h'|\\n:u'
+.    ds ^ \\k:\h'-(\\n(.wu*10/11-\*(#H)'^\h'|\\n:u'
+.    ds , \\k:\h'-(\\n(.wu*8/10)',\h'|\\n:u'
+.    ds ~ \\k:\h'-(\\n(.wu-\*(#H-.1m)'~\h'|\\n:u'
+.    ds / \\k:\h'-(\\n(.wu*8/10-\*(#H)'\z\(sl\h'|\\n:u'
 .\}
-.	\" troff and (daisy-wheel) nroff accents
+.    \" troff and (daisy-wheel) nroff accents
 .ds : \\k:\h'-(\\n(.wu*8/10-\*(#H+.1m+\*(#F)'\v'-\*(#V'\z.\h'.2m+\*(#F'.\h'|\\n:u'\v'\*(#V'
 .ds 8 \h'\*(#H'\(*b\h'-\*(#H'
-.ds v \\k:\h'-(\\n(.wu*9/10-\*(#H)'\v'-\*(#V'\*(#[\s-4v\s0\v'\*(#V'\h'|\\n:u'\*(#]
-.ds _ \\k:\h'-(\\n(.wu*9/10-\*(#H+(\*(#F*2/3))'\v'-.4m'\z\(hy\v'.4m'\h'|\\n:u'
-.ds . \\k:\h'-(\\n(.wu*8/10)'\v'\*(#V*4/10'\z.\v'-\*(#V*4/10'\h'|\\n:u'
-.ds 3 \*(#[\v'.2m'\s-2\&3\s0\v'-.2m'\*(#]
 .ds o \\k:\h'-(\\n(.wu+\w'\(de'u-\*(#H)/2u'\v'-.3n'\*(#[\z\(de\v'.3n'\h'|\\n:u'\*(#]
 .ds d- \h'\*(#H'\(pd\h'-\w'~'u'\v'-.25m'\f2\(hy\fP\v'.25m'\h'-\*(#H'
 .ds D- D\\k:\h'-\w'D'u'\v'-.11m'\z\(hy\v'.11m'\h'|\\n:u'
@@ -162,105 +118,88 @@
 .ds Th \*(#[\s+2I\s-2\h'-\w'I'u*3/5'\v'-.3m'o\v'.3m'\*(#]
 .ds ae a\h'-(\w'a'u*4/10)'e
 .ds Ae A\h'-(\w'A'u*4/10)'E
-.ds oe o\h'-(\w'o'u*4/10)'e
-.ds Oe O\h'-(\w'O'u*4/10)'E
-.	\" corrections for vroff
+.    \" corrections for vroff
 .if v .ds ~ \\k:\h'-(\\n(.wu*9/10-\*(#H)'\s-2\u~\d\s+2\h'|\\n:u'
 .if v .ds ^ \\k:\h'-(\\n(.wu*10/11-\*(#H)'\v'-.4m'^\v'.4m'\h'|\\n:u'
-.	\" for low resolution devices (crt and lpr)
+.    \" for low resolution devices (crt and lpr)
 .if \n(.H>23 .if \n(.V>19 \
 \{\
-.	ds : e
-.	ds 8 ss
-.	ds v \h'-1'\o'\(aa\(ga'
-.	ds _ \h'-1'^
-.	ds . \h'-1'.
-.	ds 3 3
-.	ds o a
-.	ds d- d\h'-1'\(ga
-.	ds D- D\h'-1'\(hy
-.	ds th \o'bp'
-.	ds Th \o'LP'
-.	ds ae ae
-.	ds Ae AE
-.	ds oe oe
-.	ds Oe OE
+.    ds : e
+.    ds 8 ss
+.    ds o a
+.    ds d- d\h'-1'\(ga
+.    ds D- D\h'-1'\(hy
+.    ds th \o'bp'
+.    ds Th \o'LP'
+.    ds ae ae
+.    ds Ae AE
 .\}
 .rm #[ #] #H #V #F C
+.\" ======================================================================
+.\"
+.IX Title "parprouted 8"
+.TH parprouted 8 "parprouted" "September 2002" "Proxy ARP Bridging Daemon"
+.UC
 .SH "NAME"
-\fBparprouted\fR \- Proxy ARP IP bridging daemon
+\&\fBparprouted\fR \- Proxy \s-1ARP\s0 \s-1IP\s0 bridging daemon
 .SH "SYNOPSIS"
-\fBparprouted\fR [\fB\-d\fR] \fBinterface\fR [\fBinterface\fR]
+.IX Header "SYNOPSIS"
+\&\fBparprouted\fR [\fB\-d\fR] \fBinterface\fR [\fBinterface\fR]
 .SH "DESCRIPTION"
-parprouted is a daemon for transparent IP (Layer 3) proxy ARP bridging. 
-Unlike standard bridging, proxy ARP bridging allows to bridge Ethernet 
+.IX Header "DESCRIPTION"
+parprouted is a daemon for transparent \s-1IP\s0 (Layer 3) proxy \s-1ARP\s0 bridging. 
+Unlike standard bridging, proxy \s-1ARP\s0 bridging allows to bridge Ethernet 
 networks behind wireless nodes. Normal L2 bridging does not work between 
-wireless nodes because wireless does not know about MAC addresses used 
+wireless nodes because wireless does not know about \s-1MAC\s0 addresses used 
 in the wired Ethernet networks.
 .PP
-The daemon will listen for incoming ARP requests and forward
-them to other interfaces, as well as update kernel ARP table with the
+The daemon will listen for incoming \s-1ARP\s0 requests and forward
+them to other interfaces, as well as update kernel \s-1ARP\s0 table with the
 received replies. Also the daemon will add direct /32 routes to your
-kernel to the hosts learned via ARP. This way, your kernel will be able
+kernel to the hosts learned via \s-1ARP\s0. This way, your kernel will be able
 to route the packets to the destination host when it receives it and you will
 not have to care about setting routing/subnetting manually. All routes
 entered by the daemon will have a metric of 50. 
 .PP
-Unless you use \fB\-p\fR switch, all entries in the ARP table will be
-refreshed (rechecked by sending ARP requests) every 50 seconds. This
+Unless you use \fB\-p\fR switch, all entries in the \s-1ARP\s0 table will be
+refreshed (rechecked by sending \s-1ARP\s0 requests) every 50 seconds. This
 keeps them from being expired by kernel.
 .PP
-It takes about 3-5 seconds for a bridge to update all its tables and
+It takes about 3\-5 seconds for a bridge to update all its tables and
 start sending packets to the destination. So, for example, if you have
 two bridges, the bridging time can be up to 10 seconds. However
-afterwards ARP entries are in the tables and there will be no delay
+afterwards \s-1ARP\s0 entries are in the tables and there will be no delay
 until they time out.
-.SH "PREREQUISITES"
+.SH "REQUIREMENTS"
+.IX Header "REQUIREMENTS"
 parprouted requires \*(L"ip\*(R" program form iproute2 tools to be installed in 
 /sbin. If it is installed in another location, please replace \*(L"/sbin/ip\*(R" 
 occurances in the source with the correct path. As well you should have
 proc filesystem mounted in /proc because the daemon uses /proc/net/arp.
 .PP
-A requirement is that you have an IP address assigned on all of your
+A requirement is that you have an \s-1IP\s0 address assigned on all of your
 interfaces that you do bridging on. There is no need for this address
 to be from the same networks as the bridged networks. Any dummy address
 will do.
 .SH "OPTIONS"
+.IX Header "OPTIONS"
 The list of interfaces to do bridging on should be given via the command
 line.
 .PP
 The daemon accepts the following switches:
 .PP
-\fB\-d\fR, which stands for debugging. If you run it in debugging mode the daemon 
-will go to background and will print additional debugging information to 
+\&\fB\-d\fR, which stands for debugging. If you run it in debugging mode the daemon 
+will not go to background and will print additional debugging information to 
 stdout/stderr.
 .PP
-\fB\-p\fR, which makes all ARP entries to be permanent. This will also
-result in that ARP tables will not be refreshed by ARP pings.
+\&\fB\-p\fR, which makes all \s-1ARP\s0 entries to be permanent. This will also
+result in that \s-1ARP\s0 tables will not be refreshed by \s-1ARP\s0 pings.
 .SH "EXAMPLE"
+.IX Header "EXAMPLE"
 To bridge between wlan0 and eth0: \fBparprouted eth0 wlan0\fR
 .SH "AUTHOR"
-.PP
+.IX Header "AUTHOR"
 .Vb 2
 \& (C) 2002, Vladimir Ivaschenko <vi@maks.net>
 \& http://www.hazard.maks.net
 .Ve
-
-.rn }` ''
-.IX Title "parprouted 8"
-.IX Name "B<parprouted> - Proxy ARP IP bridging daemon"
-
-.IX Header "NAME"
-
-.IX Header "SYNOPSIS"
-
-.IX Header "DESCRIPTION"
-
-.IX Header "PREREQUISITES"
-
-.IX Header "OPTIONS"
-
-.IX Header "EXAMPLE"
-
-.IX Header "AUTHOR"
-
